fixed: changed [link description] to the new syntax [[link|description]] for all urls

--- a/html/A Clash of Kings.html
+++ b/html/A Clash of Kings.html
@@ -3,6 +3,7 @@
 <head>
 <link rel="Stylesheet" type="text/css" href="style.css">
 <link href='http://fonts.googleapis.com/css?family=Tinos' rel='stylesheet' type='text/css'>
+<link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
 
 <title>A Clash of Kings - Covi</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -112,7 +113,7 @@ Last Modified: September 12, 2011 18:36:18
     jax: ["input/TeX","output/HTML-CSS"],
     tex2jax: {
         inlineMath: [["$","$"],["\\(","\\)"]],
-        displayMath: [ ['$$','$$'], ['\[','\]'] ],
+        displayMath: [ ['$$','$$'] ],
         processEscapes: true
     }
   });
