--- a/html/Linux Notes.html
+++ b/html/Linux Notes.html
@@ -3,6 +3,7 @@
 <head>
 <link rel="Stylesheet" type="text/css" href="style.css">
 <link href='http://fonts.googleapis.com/css?family=Tinos' rel='stylesheet' type='text/css'>
+<link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
 
 <title>Linux Notes - Covi</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -106,7 +107,7 @@ Last Modified: Sun 22 Apr 2012 07:58:18 PM CST
     jax: ["input/TeX","output/HTML-CSS"],
     tex2jax: {
         inlineMath: [["$","$"],["\\(","\\)"]],
-        displayMath: [ ['$$','$$'], ['\[','\]'] ],
+        displayMath: [ ['$$','$$'] ],
         processEscapes: true
     }
   });
