--- a/html/Machine Learning Notes.html
+++ b/html/Machine Learning Notes.html
@@ -3,6 +3,7 @@
 <head>
 <link rel="Stylesheet" type="text/css" href="style.css">
 <link href='http://fonts.googleapis.com/css?family=Tinos' rel='stylesheet' type='text/css'>
+<link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
 
 <title>Machine Learning Notes - Covi</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -43,7 +44,7 @@ Last Modified: Fri 08 Jun 2012 12:50:45 PM CST
     jax: ["input/TeX","output/HTML-CSS"],
     tex2jax: {
         inlineMath: [["$","$"],["\\(","\\)"]],
-        displayMath: [ ['$$','$$'], ['\[','\]'] ],
+        displayMath: [ ['$$','$$'] ],
         processEscapes: true
     }
   });
