--- a/html/Thermal Expansion.html
+++ b/html/Thermal Expansion.html
@@ -3,6 +3,7 @@
 <head>
 <link rel="Stylesheet" type="text/css" href="style.css">
 <link href='http://fonts.googleapis.com/css?family=Tinos' rel='stylesheet' type='text/css'>
+<link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
 
 <title>Thermal Expansion</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -27,7 +28,7 @@ S=S0*（1+b(t-t0)） S0为t0时面积，b为材料面膨胀系数
     jax: ["input/TeX","output/HTML-CSS"],
     tex2jax: {
         inlineMath: [["$","$"],["\\(","\\)"]],
-        displayMath: [ ['$$','$$'], ['\[','\]'] ],
+        displayMath: [ ['$$','$$'] ],
         processEscapes: true
     }
   });
