--- a/html/Vim.html
+++ b/html/Vim.html
@@ -3,6 +3,7 @@
 <head>
 <link rel="Stylesheet" type="text/css" href="style.css">
 <link href='http://fonts.googleapis.com/css?family=Tinos' rel='stylesheet' type='text/css'>
+<link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
 
 <title>Vim Notes %title%amp; Tricks - Covi</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -14,7 +15,7 @@
 
 <ul>
 <li>
-<a href="A tricky yank task study][/|/g/">/gDealing with Kindle's My_Clipping.txt: A tricky yank task study</a>.
+<a href="A tricky yank task study][/">/gDealing with Kindle's My_Clipping.txt: A tricky yank task study</a>.
 
 </ul>
 
@@ -118,7 +119,7 @@ Last Modified: Tue 10 Jul 2012 07:50:30 PM CST
     jax: ["input/TeX","output/HTML-CSS"],
     tex2jax: {
         inlineMath: [["$","$"],["\\(","\\)"]],
-        displayMath: [ ['$$','$$'], ['\[','\]'] ],
+        displayMath: [ ['$$','$$'] ],
         processEscapes: true
     }
   });
