--- a/html/index.html
+++ b/html/index.html
@@ -3,6 +3,7 @@
 <head>
 <link rel="Stylesheet" type="text/css" href="style.css">
 <link href='http://fonts.googleapis.com/css?family=Tinos' rel='stylesheet' type='text/css'>
+<link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
 
 <title>Covi's Personal Knowledge Base Wiki</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -10,7 +11,7 @@
 
 <body>
 
-<h1 id="toc_1">Welcome to Covi's Personal Knowledge Base Wiki!</h1>
+<h1 id="toc_1">Hi. Welcome to Covi's Personal Wiki.</h1>
 <blockquote>
 ``The greater danger for most of us lies not in setting our aim too high and falling short; but in setting our aim too low, and achieving our mark.'' -- Michelangelo Buonarroti
 </blockquote>
@@ -19,16 +20,13 @@
 </blockquote>
 
 <p>
-Hi! My name is <strong>Zongheng Yang</strong>, a high school senior in [<a href="http://www.shenzhong.net">http://www.shenzhong.net</a> Shenzhen Middle School], Shenzhen, China ([<a href="http://maps.google.com/maps?q=shenzhen,+china&amp;hl=en&amp;client=firefox-a&amp;gl=us&amp;z=10&amp;vpsrc=0">http://maps.google.com/maps?q=shenzhen,+china&amp;hl=en&amp;client=firefox-a&amp;gl=us&amp;z=10&amp;vpsrc=0</a> Google Maps]). 
+Hi and <em>Willkommen</em>! My name is <strong>Zongheng Yang</strong>, a <a href="http://www.shenzhong.net">Shenzhen Middle School</a> (<a href="http://maps.google.com/maps?q=shenzhen,+china&amp;hl=en&amp;client=firefox-a&amp;gl=us&amp;z=10&amp;vpsrc=0">Google Maps: Shenzhen, China</a>) '12 alumni, and <a href="http://berkeley.edu">UC Berkeley</a> '16.
 </p>
 
 <p>
-This personal Wiki is constructed and maintained with [<a href="http://www.vim.org/">http://www.vim.org/</a> Vim] + [<a href="http://code.google.com/p/vimwiki/">http://code.google.com/p/vimwiki/</a> Vimwiki] + [<a href="http://git-scm.com">http://git-scm.com</a> Git] and several other tools, which enable me to add something to my personal knowledge base within no more than 10 manipulative keystrokes, and yes, no mouse needed! Check out more here: <a href="About.html">About</a>.
+The Wiki records <strong>some academic notes and some of my personal interests</strong>. It is constructed and maintained with the great help of <a href="http://www.vim.org/">Vim</a> + <a href="http://code.google.com/p/vimwiki/">Vimwiki</a> + <a href="http://git-scm.com">Git</a> and several other tools, which enable me to add something to my personal knowledge base within no more than 10 keystrokes. (And yes, no mouse needed! Check out how here: <a href="About.html">About</a>.)
 </p>
 
-<p>
-The Wiki records some academic notes and some of my interests.
-</p>
 
 <h2 id="toc_1.1">Me</h2>
 <ul>
@@ -86,13 +84,13 @@ Computer Science (Github (codes, projects, work): <a href="https://github.com/co
 
 </ul>
 <li>
-<a href="LaTeX.html">LaTeX</a>, notes on !LaTeX.
+<a href="LaTeX.html">LaTeX</a>, notes on LaTeX.
 
 <li>
 <a href="Linux Notes.html">Notes on Linux</a>.
 
 <li>
-Some AP/Highschool stuff. <a href="Physics.html">Physics</a>.<a href="Statistics.html">Statistics</a>.<a href="Microeconomics.html">Microeconomics</a>.<a href="Macroeconomics.html">Macroeconomics</a>.
+Some AP/Highschool stuff. <a href="Physics.html">Physics</a>. <a href="Statistics.html">Statistics</a>. <a href="Microeconomics.html">Microeconomics</a>. <a href="Macroeconomics.html">Macroeconomics</a>.
 
 <li>
 <a href="German.html">German</a>.
@@ -102,7 +100,7 @@ Some AP/Highschool stuff. <a href="Physics.html">Physics</a>.<a href="Statistics
 <h2 id="toc_1.3">Tools + Geeky Stuff</h2>
 <ul>
 <li>
-<a href="Vim.html">Vim</a>. <em>The</em> editor. I don't edit things without it. [<a href="https://github.com/concretevitamin/vim_config">https://github.com/concretevitamin/vim_config</a> My vimrc at Github].
+<a href="Vim.html">Vim</a>. <em>The</em> editor. I don't edit things without it. <a href="https://github.com/concretevitamin/vim_config">My vimrc at Github</a>.
 
 <ul>
 <li>
@@ -116,13 +114,13 @@ Some AP/Highschool stuff. <a href="Physics.html">Physics</a>.<a href="Statistics
 <a href="Filezilla.html">Filezilla</a>
 
 <li>
-<a href="Irssi.html">Irssi</a>, a solid [<a href="http://en.wikipedia.org/wiki/Internet_Relay_Chat">http://en.wikipedia.org/wiki/Internet_Relay_Chat</a> IRC] client.
+<a href="Irssi.html">Irssi</a>, a solid <a href="http://en.wikipedia.org/wiki/Internet_Relay_Chat">IRC</a> client.
 
 <li>
 <a href="Git.html">Git</a>. I'm learning this powerful VCS. 
 
 <li>
-<a href="MathJax with Vimwiki.html">MathJax with Vimwiki</a>. Check out how I set up !MathJax with Vimwiki here, so I can display cool math such as \(a^2 = b^2 + c^2\).
+<a href="MathJax with Vimwiki.html">MathJax with Vimwiki</a>. Check out how I set up MathJax with Vimwiki here, so I can display cool math such as \(a^2 = b^2 + c^2\).
 
 <li>
 <a href="Kindle.html">Kindle</a>. I am an ardent Kindle advocate.
@@ -141,13 +139,13 @@ Some AP/Highschool stuff. <a href="Physics.html">Physics</a>.<a href="Statistics
  
 <h2 id="toc_1.5">Contact</h2>
 <p>
-<a href="http://geotakucovi.com/mail0.png">http://geotakucovi.com/mail0.png</a>
+<img src="http://geotakucovi.com/mail0.png" />
 </p>
 
 <hr />
 <p>
 Created Date: Jan 31, 2011.<br />
-Last Modified: Mon 23 Jul 2012 01:19:03 PM CST
+Last Modified: Tue 24 Jul 2012 07:51:25 PM CST
 </p>
 
 </body>
