--- a/html/music.html
+++ b/html/music.html
@@ -3,6 +3,7 @@
 <head>
 <link rel="Stylesheet" type="text/css" href="style.css">
 <link href='http://fonts.googleapis.com/css?family=Tinos' rel='stylesheet' type='text/css'>
+<link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
 
 <title>Music I love - Covi</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -68,13 +69,13 @@ Empire State of Mind, Jay-Z.
 如果我变成回忆, TANK.
 
 <li>
-爱没有假如, 若兰. <a href="AiMeiYouJiaRu][/|/gLyrics.html">AiMeiYouJiaRu][Lyrics</a>
+爱没有假如, 若兰. <a href="AiMeiYouJiaRu][Lyrics.html">AiMeiYouJiaRu][Lyrics</a>
 
 <li>
 哎呀咿呀, 陈奕迅.
 
 <li>
-孤独患者, 陈奕迅. <a href="GuDuHuanZhe][/|/gLyrics.html">GuDuHuanZhe][Lyrics</a>
+孤独患者, 陈奕迅. <a href="GuDuHuanZhe][Lyrics.html">GuDuHuanZhe][Lyrics</a>
 
 </ol>
 
@@ -92,7 +93,7 @@ Last Modified: December 16, 2011 09:03:07
     jax: ["input/TeX","output/HTML-CSS"],
     tex2jax: {
         inlineMath: [["$","$"],["\\(","\\)"]],
-        displayMath: [ ['$$','$$'], ['\[','\]'] ],
+        displayMath: [ ['$$','$$'] ],
         processEscapes: true
     }
   });
