--- a/html/power means inequality.html
+++ b/html/power means inequality.html
@@ -3,6 +3,7 @@
 <head>
 <link rel="Stylesheet" type="text/css" href="style.css">
 <link href='http://fonts.googleapis.com/css?family=Tinos' rel='stylesheet' type='text/css'>
+<link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
 
 <title>power means inequality</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -32,7 +33,7 @@ Given b &lt; a, then M_b &lt;= M_a. The equivalence holds iff a_1 = a_2 = ... = 
     jax: ["input/TeX","output/HTML-CSS"],
     tex2jax: {
         inlineMath: [["$","$"],["\\(","\\)"]],
-        displayMath: [ ['$$','$$'], ['\[','\]'] ],
+        displayMath: [ ['$$','$$'] ],
         processEscapes: true
     }
   });
