--- a/html/thin film interference.html
+++ b/html/thin film interference.html
@@ -3,6 +3,7 @@
 <head>
 <link rel="Stylesheet" type="text/css" href="style.css">
 <link href='http://fonts.googleapis.com/css?family=Tinos' rel='stylesheet' type='text/css'>
+<link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
 
 <title>thin film interference</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -44,7 +45,7 @@ where n_1 &lt; n_2 &gt; n_3 (if n_1 &lt; n_2 &lt; n_3, no phase change will occu
     jax: ["input/TeX","output/HTML-CSS"],
     tex2jax: {
         inlineMath: [["$","$"],["\\(","\\)"]],
-        displayMath: [ ['$$','$$'], ['\[','\]'] ],
+        displayMath: [ ['$$','$$'] ],
         processEscapes: true
     }
   });
