--- a/html/A Song of Ice and Fire.html
+++ b/html/A Song of Ice and Fire.html
@@ -3,6 +3,7 @@
 <head>
 <link rel="Stylesheet" type="text/css" href="style.css">
 <link href='http://fonts.googleapis.com/css?family=Tinos' rel='stylesheet' type='text/css'>
+<link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
 
 <title>A Song of Ice and Fire - Covi</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -50,7 +51,7 @@ Last Modified: September 12, 2011 18:49:44
     jax: ["input/TeX","output/HTML-CSS"],
     tex2jax: {
         inlineMath: [["$","$"],["\\(","\\)"]],
-        displayMath: [ ['$$','$$'], ['\[','\]'] ],
+        displayMath: [ ['$$','$$'] ],
         processEscapes: true
     }
   });
