--- a/html/A tricky yank task study.html
+++ b/html/A tricky yank task study.html
@@ -3,6 +3,7 @@
 <head>
 <link rel="Stylesheet" type="text/css" href="style.css">
 <link href='http://fonts.googleapis.com/css?family=Tinos' rel='stylesheet' type='text/css'>
+<link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
 
 <title>A Tricky Yank Task Study: How to deal with Kindle's Notes and Highlights using Vim - Covi</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -97,7 +98,7 @@ Last Modified: Feb 05, 2011 22:49:08
     jax: ["input/TeX","output/HTML-CSS"],
     tex2jax: {
         inlineMath: [["$","$"],["\\(","\\)"]],
-        displayMath: [ ['$$','$$'], ['\[','\]'] ],
+        displayMath: [ ['$$','$$'] ],
         processEscapes: true
     }
   });
