--- a/html/An Occurrence at Owl Creek Bridge.html
+++ b/html/An Occurrence at Owl Creek Bridge.html
@@ -3,6 +3,7 @@
 <head>
 <link rel="Stylesheet" type="text/css" href="style.css">
 <link href='http://fonts.googleapis.com/css?family=Tinos' rel='stylesheet' type='text/css'>
+<link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
 
 <title>An Occurrence at Owl Creek Bridge</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -131,7 +132,7 @@ Last Modified: Apr 02, 2011 21:10:19
     jax: ["input/TeX","output/HTML-CSS"],
     tex2jax: {
         inlineMath: [["$","$"],["\\(","\\)"]],
-        displayMath: [ ['$$','$$'], ['\[','\]'] ],
+        displayMath: [ ['$$','$$'] ],
         processEscapes: true
     }
   });
