--- a/html/Graph Theory and Algorithms.html
+++ b/html/Graph Theory and Algorithms.html
@@ -3,6 +3,7 @@
 <head>
 <link rel="Stylesheet" type="text/css" href="style.css">
 <link href='http://fonts.googleapis.com/css?family=Tinos' rel='stylesheet' type='text/css'>
+<link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
 
 <title>Graphy Theory and Algorithms - Covi</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -46,7 +47,7 @@ Last Modified: October 22, 2011 22:18:35
     jax: ["input/TeX","output/HTML-CSS"],
     tex2jax: {
         inlineMath: [["$","$"],["\\(","\\)"]],
-        displayMath: [ ['$$','$$'], ['\[','\]'] ],
+        displayMath: [ ['$$','$$'] ],
         processEscapes: true
     }
   });
