--- a/html/Irssi.html
+++ b/html/Irssi.html
@@ -3,6 +3,7 @@
 <head>
 <link rel="Stylesheet" type="text/css" href="style.css">
 <link href='http://fonts.googleapis.com/css?family=Tinos' rel='stylesheet' type='text/css'>
+<link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
 
 <title>Irssi Notes - Covi</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -31,7 +32,7 @@ Last Modified: Sat 25 Feb 2012 12:36:49 PM CST
     jax: ["input/TeX","output/HTML-CSS"],
     tex2jax: {
         inlineMath: [["$","$"],["\\(","\\)"]],
-        displayMath: [ ['$$','$$'], ['\[','\]'] ],
+        displayMath: [ ['$$','$$'] ],
         processEscapes: true
     }
   });
