--- a/html/MathJax with Vimwiki.html
+++ b/html/MathJax with Vimwiki.html
@@ -3,6 +3,7 @@
 <head>
 <link rel="Stylesheet" type="text/css" href="style.css">
 <link href='http://fonts.googleapis.com/css?family=Tinos' rel='stylesheet' type='text/css'>
+<link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
 
 <title>MathJax with Vimwiki - Covi</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -69,7 +70,7 @@ Last Modified: October 21, 2011 23:07:24
     jax: ["input/TeX","output/HTML-CSS"],
     tex2jax: {
         inlineMath: [["$","$"],["\\(","\\)"]],
-        displayMath: [ ['$$','$$'], ['\[','\]'] ],
+        displayMath: [ ['$$','$$'] ],
         processEscapes: true
     }
   });
