--- a/html/Movies (covilap's conflicted copy 2011-05-16).html
+++ b/html/Movies (covilap's conflicted copy 2011-05-16).html
@@ -3,6 +3,7 @@
 <head>
 <link rel="Stylesheet" type="text/css" href="style.css">
 <link href='http://fonts.googleapis.com/css?family=Tinos' rel='stylesheet' type='text/css'>
+<link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
 
 <title>Movies I've Watched</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -68,7 +69,7 @@ Last Modified: May 13, 2011 15:11:50
     jax: ["input/TeX","output/HTML-CSS"],
     tex2jax: {
         inlineMath: [["$","$"],["\\(","\\)"]],
-        displayMath: [ ['$$','$$'], ['\[','\]'] ],
+        displayMath: [ ['$$','$$'] ],
         processEscapes: true
     }
   });
