--- a/html/NOIP 2011 Prep.html
+++ b/html/NOIP 2011 Prep.html
@@ -3,6 +3,7 @@
 <head>
 <link rel="Stylesheet" type="text/css" href="style.css">
 <link href='http://fonts.googleapis.com/css?family=Tinos' rel='stylesheet' type='text/css'>
+<link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
 
 <title>My Preparation for NOIP 2011 - Covi</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -48,7 +49,7 @@ Last Modified: November 03, 2011 13:12:13
     jax: ["input/TeX","output/HTML-CSS"],
     tex2jax: {
         inlineMath: [["$","$"],["\\(","\\)"]],
-        displayMath: [ ['$$','$$'], ['\[','\]'] ],
+        displayMath: [ ['$$','$$'] ],
         processEscapes: true
     }
   });
