--- a/html/ProjectEuler.html
+++ b/html/ProjectEuler.html
@@ -3,6 +3,7 @@
 <head>
 <link rel="Stylesheet" type="text/css" href="style.css">
 <link href='http://fonts.googleapis.com/css?family=Tinos' rel='stylesheet' type='text/css'>
+<link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
 
 <title>Project Euler - Covi</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -32,7 +33,7 @@ Last Modified: November 23, 2011 08:16:02
     jax: ["input/TeX","output/HTML-CSS"],
     tex2jax: {
         inlineMath: [["$","$"],["\\(","\\)"]],
-        displayMath: [ ['$$','$$'], ['\[','\]'] ],
+        displayMath: [ ['$$','$$'] ],
         processEscapes: true
     }
   });
