--- a/html/Tests on Ti-84.html
+++ b/html/Tests on Ti-84.html
@@ -3,6 +3,7 @@
 <head>
 <link rel="Stylesheet" type="text/css" href="style.css">
 <link href='http://fonts.googleapis.com/css?family=Tinos' rel='stylesheet' type='text/css'>
+<link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
 
 <title>Tests on Ti-84</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -24,7 +25,7 @@ LinRegTTest
     jax: ["input/TeX","output/HTML-CSS"],
     tex2jax: {
         inlineMath: [["$","$"],["\\(","\\)"]],
-        displayMath: [ ['$$','$$'], ['\[','\]'] ],
+        displayMath: [ ['$$','$$'] ],
         processEscapes: true
     }
   });
