--- a/html/The Adventures of Huckleberry Finn.html
+++ b/html/The Adventures of Huckleberry Finn.html
@@ -3,6 +3,7 @@
 <head>
 <link rel="Stylesheet" type="text/css" href="style.css">
 <link href='http://fonts.googleapis.com/css?family=Tinos' rel='stylesheet' type='text/css'>
+<link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
 
 <title>The Adventures of Huckleberry Finn</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -239,7 +240,7 @@ I knowed he was white inside,
     jax: ["input/TeX","output/HTML-CSS"],
     tex2jax: {
         inlineMath: [["$","$"],["\\(","\\)"]],
-        displayMath: [ ['$$','$$'], ['\[','\]'] ],
+        displayMath: [ ['$$','$$'] ],
         processEscapes: true
     }
   });
