--- a/html/calculus.html
+++ b/html/calculus.html
@@ -3,6 +3,7 @@
 <head>
 <link rel="Stylesheet" type="text/css" href="style.css">
 <link href='http://fonts.googleapis.com/css?family=Tinos' rel='stylesheet' type='text/css'>
+<link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
 
 <title>Calculus Notes - Covi</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -51,7 +52,7 @@ Last Modified: Mar 19, 2011 21:14:01
     jax: ["input/TeX","output/HTML-CSS"],
     tex2jax: {
         inlineMath: [["$","$"],["\\(","\\)"]],
-        displayMath: [ ['$$','$$'], ['\[','\]'] ],
+        displayMath: [ ['$$','$$'] ],
         processEscapes: true
     }
   });
