--- a/html/comparison between monoplies.html
+++ b/html/comparison between monoplies.html
@@ -3,6 +3,7 @@
 <head>
 <link rel="Stylesheet" type="text/css" href="style.css">
 <link href='http://fonts.googleapis.com/css?family=Tinos' rel='stylesheet' type='text/css'>
+<link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
 
 <title>comparison between monoplies</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -26,7 +27,7 @@ P_a &gt; P_b &gt; P_c, X_a &lt; X_b &lt; X_c.
     jax: ["input/TeX","output/HTML-CSS"],
     tex2jax: {
         inlineMath: [["$","$"],["\\(","\\)"]],
-        displayMath: [ ['$$','$$'], ['\[','\]'] ],
+        displayMath: [ ['$$','$$'] ],
         processEscapes: true
     }
   });
