--- a/html/wordcount.html
+++ b/html/wordcount.html
@@ -3,6 +3,7 @@
 <head>
 <link rel="Stylesheet" type="text/css" href="style.css">
 <link href='http://fonts.googleapis.com/css?family=Tinos' rel='stylesheet' type='text/css'>
+<link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
 
 <title>wordcount.py and Some Interesting Results - Covi</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -119,7 +120,7 @@ Created Date: November 26, 2011 10:34:46<br />
     jax: ["input/TeX","output/HTML-CSS"],
     tex2jax: {
         inlineMath: [["$","$"],["\\(","\\)"]],
-        displayMath: [ ['$$','$$'], ['\[','\]'] ],
+        displayMath: [ ['$$','$$'] ],
         processEscapes: true
     }
   });
