--- a/html/Machine Learning Notes.html
+++ b/html/Machine Learning Notes.html
@@ -20,10 +20,10 @@ Since Apr 2012 I have been taking Coursera.org's online Machine Learning course.
 <h2 id="toc_1.1">Notes</h2>
 <ul>
 <li>
-Logistic regression. ([<a href="http://me.geotakucovi.com/logistic.html">http://me.geotakucovi.com/logistic.html</a> html] | [<a href="http://me.geotakucovi.com/logistic.pdf">http://me.geotakucovi.com/logistic.pdf</a> pdf])
+Logistic regression. (<a href="http://me.geotakucovi.com/logistic.html">html</a> | <a href="http://me.geotakucovi.com/logistic.pdf">pdf</a>)
 
 <li>
-Regularization (for linear regression and logistic regression). ([<a href="http://me.geotakucovi.com/regularization.pdf">http://me.geotakucovi.com/regularization.pdf</a> pdf])
+Regularization (for linear regression and logistic regression). (<a href="http://me.geotakucovi.com/regularization.pdf">pdf</a>)
 
 <li>
 <a href="Issues in training models.html">Issues in training models</a>.
@@ -33,7 +33,7 @@ Regularization (for linear regression and logistic regression). ([<a href="http:
 <hr />
 <p>
 Creation Date: May 23, 2012 23:23:51<br />
-Last Modified: Fri 08 Jun 2012 12:50:45 PM CST
+Last Modified: Fri 27 Jul 2012 11:17:47 AM CST
 </p>
 
 </body>
