--- a/html/NLP Notes.html
+++ b/html/NLP Notes.html
@@ -20,14 +20,14 @@ Since Apr 2012 I have been taking Coursera.org's online NLP course, offered by S
 <h2 id="toc_1.1">Notes</h2>
 <ul>
 <li>
-Maximum Entropy (Maxent) models. ([<a href="http://me.geotakucovi.com/maxent.html">http://me.geotakucovi.com/maxent.html</a> html] | [<a href="http://me.geotakucovi.com/maxent.pdf">http://me.geotakucovi.com/maxent.pdf</a> pdf])
+Maximum Entropy (Maxent) models. (<a href="http://me.geotakucovi.com/maxent.html">html</a> | <a href="http://me.geotakucovi.com/maxent.pdf">pdf</a>)
 
 </ul>
 
 <hr />
 <p>
 Creation Date: June 10, 2012 00:03:41<br>
-Last Modified: June 10, 2012 00:03:41 
+Last Modified: Fri 27 Jul 2012 11:18:17 AM CST
 </p>
 
 </body>
