--- a/html/Movies.html
+++ b/html/Movies.html
@@ -257,13 +257,25 @@
 <em>Hatfields and McCoys</em>, (mini TV series), Part 1-3.
 
 <li>
-<em>3:10 to Yuma</em>, 2007
+<em>3:10 to Yuma</em>, 2007.
+
+<li>
+<em>The Amazing Spider-Man</em>, 2012.
+
+<li>
+(Rewatch) <em>Batman Begins</em>, 2005.
+
+<li>
+<em>The Dark Knight Rises</em>, 2012.
+
+<li>
+(Rewatch) <em>The Dark Knight</em>, 2008.
 
 </ul>
 <hr />
 <p>
 Creation Date: Feb 09, 2011 0:13:47<br />
-Last Modified: Thu 26 Jul 2012 10:19:42 AM CST
+Last Modified: Wed 01 Aug 2012 10:50:05 AM CST
 </p>
 
 </body>
